objects/adapps__OptimizerPlus_Unassigned_Perm_Sets_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Permission_Set_Name__c</fullName>
        <label>Permission Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Unassigned_Permission_Sets__c</fullName>
        <label>Unassigned Permission Sets</label>
        <referenceTo>adapps__OptimizerPlus_Unassigned_Perm_Sets__c</referenceTo>
        <relationshipLabel>Unassigned Permission Sets Items</relationshipLabel>
        <relationshipName>Unassigned_Permission_Sets_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Unassigned Permission Sets Item</label>
    <nameField>
        <label>Unassigned Permission Sets Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unassigned Permission Sets Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>